Fixed layout bugs, added new sections About me, Projects, Contact. Added smooth scrolling in index_css

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,9 @@
 .container {
     min-height: 100vh;
-    width: 100%;
+    min-width: 100%;
     position: relative;
+    padding: 0;
+    display: flex;
 }
 .container .bg {
     background: url("../img/bg-new.JPG");
@@ -18,11 +20,13 @@
     display: flex;
     width: 100%;
     padding-top: 60px;
+    min-height: 100% !important;
 }
 .container h1 {
     font-weight: 700;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 1em;
     color: rgb(45, 67, 102);
 }
 /* .home .layer2 {
